--- a/src/main/resources/templates/join-form.mustache
+++ b/src/main/resources/templates/join-form.mustache
@@ -16,7 +16,7 @@
 			<label class="form-label">이메일:</label>
 			<input name="email" type="email" class="form-control" placeholder="Enter email" required maxlength="20">
 		</div>
-		<div id="callBackDiv" class="mb-3">
+		<div class="mb-3">
 			<label class="form-label">주소:</label>
 			<div class="d-flex">
 				<input type="text" class="form-control mt-3" id="roadFullAddr" name="address" placeholder="주소찾기를 눌러주세요"
