--- a/src/main/resources/templates/update-form.mustache
+++ b/src/main/resources/templates/update-form.mustache
@@ -10,7 +10,7 @@
 		<label class="form-label">이메일:</label>
 		<input id="email" type="email" class="form-control" value="{{principal.email}}" required maxlength="50">
 	</div>
-	<div id="callBackDiv" class="mb-3">
+	<div class="mb-3">
 		<label class="form-label">주소:</label>
 		<div class="d-flex">
 			<input type="text" class="form-control mt-3" id="roadFullAddr" value="{{principal.address}}" readonly />
